refactor: clean up comments

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <strong>Motivation:</strong> Solving problems in markets where nanoseconds of latency and single basis points of accuracy define success.
                             </li>
                             <li>
-                                <strong>Focus:</strong> Moving from theory to application by engineering robust systems for Options Pricing and Risk Analysis.
+                                <strong>Focus:</strong> Capturing market edge by building systems where decision accuracy and engineering precision drive profitability.
                             </li>
                         </ul>
                         
