--- a/projects/options-pricing.html
+++ b/projects/options-pricing.html
@@ -72,6 +72,10 @@
                 <div class="meta-item"><strong>CODE</strong><span><a href="https://github.com/archuthanm/options-pricing-risk-analysis" target="_blank" style="text-decoration: underline;">View Repo</a></span></div>
             </div>
 
+            <a href="/index.html" class="btn-link">
+                <span class="arrow">←</span> Back to Home
+            </a>
+
             <div class="project-content">
                 <div class="text-block">
                     <h2>1. The Objective</h2>
@@ -110,6 +114,11 @@
                     <a href="../assets/documents/Options Pricing and Risk Analysis Project.pdf" target="_blank" class="btn" style="width: 100%; text-align: center; margin-top: 20px;">
                         Download PDF
                     </a>
+                    
+                    <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5917043" target="_blank" class="btn" style="width: 100%; text-align: center; margin-top: 20px;">
+                        View on SSRN
+                    </a>
+
                 </div>
             </div>
         </section>
