--- a/projects/mpt-optimisation.html
+++ b/projects/mpt-optimisation.html
@@ -72,6 +72,10 @@
                 <div class="meta-item"><strong>CODE</strong><span><a target="_blank" style="text-decoration: underline;">View Repo</a></span></div>
             </div>
 
+            <a href="/index.html" class="btn-link">
+                <span class="arrow">←</span> Back to Home
+            </a>
+
             <div class="project-content">
                 <div class="text-block">
                     <h2>1. The Objective</h2>
